# MultiprojectorTiledDisplay

./: .gitignore  1.txt~  CMakeLists.txt  Hosts_old.py~  LICENSE  README.md  chromium_proj_0.txt  chromium_proj_1.txt  chromium_proj_1.txt~  chromium_proj_2.txt  chromium_proj_2.txt~  chromium_proj_3.txt  chromium_proj_3.txt~  chromium_proj_4.txt  chromium_proj_4.txt~  chromium_proj_5.txt  chromium_proj_5.txt~  chromium_proj_6.txt  chromium_proj_6.txt~  chromium_proj_7.txt  chromium_proj_7.txt~  chromium_proj_8.txt  chromium_proj_8.txt~  cs_rot_mat.xml  cs_trans_vect.xml  cshomo0.xml  dependencies.h~  detected_corners_0.txt~  detected_corners_0_original_camera_space.txt  detected_corners_0_original_screen_space.txt  detected_corners_0_recovered.txt  detected_corners_1_original_camera_space.txt  detected_corners_1_original_screen_space.txt  detected_corners_1_recovered.txt  detected_corners_2_original_camera_space.txt  detected_corners_2_original_screen_space.txt  detected_corners_2_recovered.txt  detected_corners_3_original_camera_space.txt  detected_corners_3_original_screen_space.txt  detected_corners_3_recovered.txt  (+34 more)
src/: CMakeLists.txt  sl_multiproj.cpp
src/GUI/: CMakeLists.txt  Makefile  gui_form  gui_form.cpp  gui_form.h  gui_form.ui  main.cpp  moc_gui_form.cpp  qtConfig.pro  ui_gui_form.h
src/blend_mask_generator/: CMakeLists.txt  alpha_map_2.txt  alpha_map_3.txt  alpha_map_4.txt  alpha_map_6.txt  alpha_map_8.txt  blend_mask_generator.cpp  global_box_detected_corners_0.txt  global_box_detected_corners_1.txt  global_box_detected_corners_2.txt  scale_xy.txt  (+1 more)
(+83 files in other folders)
